--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,37 @@
+/* @font-face {
+  font-family: "DIN Pro";
+  font-weight: 300;
+  src: url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Light.woff") format("woff"),
+       url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Light.woff2") format("woff2");
+}
+@font-face {
+  font-family: "DIN Pro";
+  font-weight: 400;
+  src: url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro.woff") format("woff"),
+       url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro.woff2") format("woff2");
+} */
+@font-face {
+  font-family: "DIN Pro";
+  font-weight: 500;
+  src: url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Medium.woff") format("woff"),
+       url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Medium.woff2") format("woff2");
+}
+@font-face {
+  font-family: "DIN Pro";
+  font-weight: 700;
+  src: url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Bold.woff") format("woff"),
+       url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Bold.woff2") format("woff2");
+}
+@font-face {
+  font-family: "DIN Pro";
+  font-weight: 900;
+  src: url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Black.woff") format("woff"),
+       url("https://cdn.jsdelivr.net/gh/daydreamer-json/SomeFontRepo@main/woff/din/pro/DINPro-Black.woff2") format("woff2");
+}
+
 body {
   margin: 0;
-  font-family: 'Roboto', 'Noto Sans JP', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'DIN Pro', 'Noto Sans JP', 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
