--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,12 @@ img {
   -moz-user-select: none;
   pointer-events: none;
 }
+.plyr {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow:
+    0px 7px 8px -4px rgba(0,0,0,0.2),
+    0px 12px 17px 2px rgba(0,0,0,0.14),
+    0px 5px 22px 4px rgba(0,0,0,0.12);
+  margin-bottom: 16px;
+}
